--- a/week three/index.html
+++ b/week three/index.html
@@ -19,7 +19,7 @@
     </header>
 
     <nav>
-      <ul>
+      <ul class="unstyled">
         <li><a href="#">Home</a></li>
         <li><a href="#">Our team</a></li>
         <li><a href="#">Projects</a></li>
