--- a/week three/week 5/practie.html/Portfolio.html
+++ b/week three/week 5/practie.html/Portfolio.html
@@ -5,19 +5,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Benjamin Portfolio</title>
     <link rel="stylesheet" href="port.css">
+    
 </head>
-<body>
-    <div class = 'container' style="width:1000px">
+<body class="container">
     <nav class="navbar">
         <div class="navdiv">
             <div class="logo"><a href="#">BEN</a></div>
-            <ul>
+            <div>
+            <ul class = 'nav-items'>
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Resume</a></li>
                 <li><a href="#">LinkedIn</a></li>
             </ul>
+            </div>
         </div>
     </nav>
+    <div class="wrapper">
+         <div class="about">
+            <article>  
+         
+            <h4>BENJAMIN OFURHIE</h4>
+            <blockquote>
+                As a Data Analyst at Dealroom and Meriskills, I specialize in data cleaning with Excel/Google Sheets, ensuring data quality, and leveraging PowerBI, SQL/Big Query, and Tableau for insights. I collaborate with teams to identify data needs, perform analyses, and present clear findings, contributing to improved data quality, problem-solving, and cost optimization.
+            </article>
+        </div>
+    </div>
+    <div id="slider">
+        <figure>
+            <img src="Ecommerce.png">
+            <img src="Hotel Revenue.png">
+            <img src="Road Accident.png">
+            <img src="Sales Report.png">
+            <img src="Ecommerce.png">
+        </figure>
     </div>
 </body>
 </html>
