--- a/week three/week 5/practie.html/Portfolio.html
+++ b/week three/week 5/practie.html/Portfolio.html
@@ -5,9 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Benjamin Portfolio</title>
     <link rel="stylesheet" href="port.css">
-    
 </head>
-<body class="container">
+<body>
     <nav class="navbar">
         <div class="navdiv">
             <div class="logo"><a href="#">BEN</a></div>
@@ -22,22 +21,59 @@
     </nav>
     <div class="wrapper">
          <div class="about">
-            <article>  
-         
-            <h4>BENJAMIN OFURHIE</h4>
+            <article>
+            <h2>Welcome To My World of Data Analysis</h2>
+            <h4>Benjamin Ofurhie</h4>
             <blockquote>
-                As a Data Analyst at Dealroom and Meriskills, I specialize in data cleaning with Excel/Google Sheets, ensuring data quality, and leveraging PowerBI, SQL/Big Query, and Tableau for insights. I collaborate with teams to identify data needs, perform analyses, and present clear findings, contributing to improved data quality, problem-solving, and cost optimization.
+                As a Data Analyst, I specialize in data cleaning and Analysis with Excel/Google Sheets, 
+                ensuring data quality, and leveraging PowerBI, SQL/Big Query, and Tableau for insights. 
+                I collaborated with the Data team to identify data needs, perform analyses, and present clear findings, contributing to improved data quality, problem-solving, and cost optimization.
+            </blockquote>
             </article>
         </div>
     </div>
-    <div id="slider">
-        <figure>
-            <img src="Ecommerce.png">
-            <img src="Hotel Revenue.png">
-            <img src="Road Accident.png">
-            <img src="Sales Report.png">
-            <img src="Ecommerce.png">
-        </figure>
+    <div class="carousel-container">
+        <div class="carousel-slide">
+            <img src="Photos/Screenshot_202.png" alt="Screenshot">
+            <img src="Photos/Ecommerce.png" alt="Ecommerce">
+            <img src="Photos/Hotel_Revenue.png" alt="Hotel Revenue">
+            <img src="Photos/Road_Accident.png" alt="Road Accident">
+            <img src="Photos/Sales_report.png" alt="Sales Report">
+        </div>
+    </div>           
+    <div class="intro">
+          <p>Here are some of the projects I worked on as a Data analyst with different Analysis tools to answer some important Business questions</p>
+    </div>
+    <div class="cards">
+          <div class="card">
+              <img src="https://th.bing.com/th/id/OIP.jZ14qPhU569db4MzpkhbGgHaE5?w=262&h=180&c=7&r=0&o=5&pid=1.7" alt="" class="card_image">
+              <div class="direc"><a href=""><button>Read More</button></a></div>
+          </div>
+
+          <div class="card">
+            <img src="https://th.bing.com/th/id/OIP.jZ14qPhU569db4MzpkhbGgHaE5?w=262&h=180&c=7&r=0&o=5&pid=1.7" alt="" class="card_image">
+            <div><a href=""><button>Read More</button></a></div>
+        </div>
+
+        <div class="card">
+            <img src="https://th.bing.com/th/id/OIP.jZ14qPhU569db4MzpkhbGgHaE5?w=262&h=180&c=7&r=0&o=5&pid=1.7" alt="" class="card_image">
+            <div><a href=""><button>Read More</button></a></div>
+        </div>
+
+        <div class="card">
+            <img src="https://th.bing.com/th/id/OIP.jZ14qPhU569db4MzpkhbGgHaE5?w=262&h=180&c=7&r=0&o=5&pid=1.7" alt="" class="card_image">
+            <div><a href=""><button>Read More</button></a></div>
+        </div>
+
+        <div class="card">
+            <img src="https://th.bing.com/th/id/OIP.jZ14qPhU569db4MzpkhbGgHaE5?w=262&h=180&c=7&r=0&o=5&pid=1.7" alt="" class="card_image">
+            <div><a href=""><button>Read More</button></a></div>
+        </div>
+
+        <div class="card">
+            <img src="https://th.bing.com/th/id/OIP.jZ14qPhU569db4MzpkhbGgHaE5?w=262&h=180&c=7&r=0&o=5&pid=1.7" alt="" class="card_image">
+            <div><a href=""><button>Read More</button></a></div>
+        </div>
     </div>
 </body>
 </html>
